updated entities to match lucid chart