@@ -3,6 +3,7 @@ package com.pell.streamaggregator.service;
 import com.pell.streamaggregator.entity.Director;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -10,7 +11,7 @@ public class DirectorService {
 
     public List<Director> getAllDirectors() {
         // TODO stubbed
-        return List.of(new Director());
+        return Collections.emptyList();
     }
 
 }
