@@ -4,6 +4,7 @@ import com.pell.streamaggregator.entity.Media;
 import com.pell.streamaggregator.entity.MediaPlatform;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -11,7 +12,7 @@ public class MediaService {
 
     public List<Media> getAllMedia() {
         // TODO stubbed
-        return List.of(new Media());
+        return Collections.emptyList();
     }
 
 }
