@@ -4,6 +4,7 @@ import com.pell.streamaggregator.entity.MediaPlatform;
 import com.pell.streamaggregator.entity.MediaSource;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -11,7 +12,7 @@ public class MediaSourceService {
 
     public List<MediaSource> getAllMediaSources() {
         // TODO stubbed
-        return List.of(new MediaSource());
+        return Collections.emptyList();
     }
 
 }
